# llm-usage-tracker

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: cli.py  collection.py  recommendations.py  scheduler.py
backend/api/: routes.py
backend/collectors/: base.py  chatgpt.py  chatgpt_api.py  claude.py  claude_api.py  gemini.py  gemini_api.py  groq.py  groq_api.py  litellm.py
backend/db/: db.py  models.py
plugin/: package-lock.json  package.json  tsconfig.json
plugin/src/: index.ts
plugin/src/lib/: client.ts  config.ts  format.ts
